Fixed SPO1017 and SPO1009

--- a/SportsSideKick/app/src/brugge/res/values/styles.xml
+++ b/SportsSideKick/app/src/brugge/res/values/styles.xml
@@ -209,6 +209,8 @@
         <item name="editProfileTextColorRef">@color/black</item>
         <item name="editLanguageTextColorRef">@color/black</item>
 
+        <item name="videoCloseButtonChatColorRef">@color/white</item>
+
     </style>
 
 
