--- a/SportsSideKick/app/src/main/res/layout/fragment_wall.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_wall.xml
@@ -26,6 +26,7 @@
                 android:layout_height="match_parent">
                 <RelativeLayout
                     android:id="@+id/wall_top_image_container"
+                    android:visibility="gone"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
 
