--- a/SportsSideKick/app/src/main/res/layout/activity_lounge_phone.xml
+++ b/SportsSideKick/app/src/main/res/layout/activity_lounge_phone.xml
@@ -28,8 +28,6 @@
             android:layout_above="@+id/side_menu_recycler"
             android:layout_below="@+id/left_top_bar_container"
             android:background="@color/colorPrimaryMediumLight" >
-
-
         </RelativeLayout>
 
         <RelativeLayout
@@ -37,7 +35,6 @@
             android:layout_width="match_parent"
             android:layout_height="@dimen/height_48"
             android:background="@android:color/transparent">
-            <!--app:layout_heightPercent="7%"-->
             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -164,45 +161,12 @@
             android:layout_alignParentTop="true"
             android:background="@color/transparent" />
 
-        <RelativeLayout
+        <base.app.util.ui.NextMatchView
             android:id="@+id/splash"
-            xmlns:app="http://schemas.android.com/apk/res-auto"
             android:visibility="visible"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
-            <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:contentDescription="@null"
-                android:scaleType="centerCrop"
-                android:src="?loginBackground" />
-
-            <RelativeLayout
-                android:id="@+id/splash_container"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"/>
-
-            <com.wang.avi.AVLoadingIndicatorView
-                android:id="@+id/progress_bar"
-                android:layout_width="@dimen/progress_bar_width"
-                android:layout_height="@dimen/progress_bar_height"
-                android:layout_centerInParent="true"
-                android:elevation="@dimen/elevation_2"
-                android:visibility="visible"
-                app:indicatorName="LineSpinFadeLoaderIndicator" />
-            <TextView
-                android:id="@+id/waiting_connection"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:visibility="gone"
-                android:textSize="20sp"
-                android:textColor="@color/white"
-                android:layout_marginTop="@dimen/margin_10"
-                android:layout_centerHorizontal="true"
-                android:layout_below="@id/progress_bar"
-                android:text="@string/waiting_for_active_internet_connection"
-                />
-        </RelativeLayout>
+        </base.app.util.ui.NextMatchView>
 
         <LinearLayout
             android:id="@+id/fragment_radio_container"
@@ -337,14 +301,12 @@
                                 android:progressDrawable="?circularProgressBarDrawable"
                                 android:visibility="invisible" />
                         </RelativeLayout>
-
                         <RelativeLayout
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_below="@+id/holder_progress_bar"
                             android:layout_centerHorizontal="true"
                             android:layout_marginTop="@dimen/margin_negative_8">
-
                             <ImageView
                                 android:id="@+id/user_level_background"
                                 android:layout_width="@dimen/profile_level_marker_size"
@@ -354,7 +316,6 @@
                                 android:contentDescription="@string/image"
                                 android:src="?nextLevelMarkerIcon"
                                 android:visibility="invisible" />
-
                             <TextView
                                 android:id="@+id/user_level"
                                 android:layout_width="@dimen/profile_level_marker_size"
@@ -366,19 +327,13 @@
                                 android:textStyle="bold"
                                 android:visibility="invisible" />
                         </RelativeLayout>
-
-
                     </RelativeLayout>
-
-
                 </RelativeLayout>
-
                 <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_toEndOf="@+id/profile_info_holder"
                     app:layout_widthPercent="50%">
-
                     <android.support.percent.PercentRelativeLayout
                         android:id="@+id/your_coins"
                         android:layout_width="wrap_content"
@@ -386,7 +341,6 @@
                         android:layout_centerInParent="true"
                         android:gravity="center_horizontal"
                         android:orientation="vertical">
-
                         <ImageView
                             android:id="@+id/user_coin_icon"
                             android:layout_width="wrap_content"
@@ -396,7 +350,6 @@
                             android:contentDescription="@null"
                             android:src="?userCoinIcon"
                             app:layout_heightPercent="25%" />
-
                         <TextView
                             android:id="@+id/you_have"
                             android:layout_width="wrap_content"
@@ -410,7 +363,6 @@
                             android:textAlignment="center"
                             android:textColor="@color/colorPrimaryVeryDark"
                             android:textSize="@dimen/font_size_8" />
-
                         <TextView
                             android:id="@+id/your_coins_value"
                             android:layout_width="wrap_content"
@@ -423,12 +375,9 @@
                             android:textColor="@color/colorPrimarySemiLight"
                             android:textSize="@dimen/font_size_12"
                             android:textStyle="bold" />
-
                     </android.support.percent.PercentRelativeLayout>
                 </RelativeLayout>
-
             </android.support.percent.PercentRelativeLayout>
-
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/menu_recycler_view"
                 android:layout_width="match_parent"
@@ -441,10 +390,7 @@
                 android:dividerHeight="0dp"
                 android:footerDividersEnabled="false"
                 android:overScrollFooter="@android:color/transparent">
-
             </android.support.v7.widget.RecyclerView>
-
         </android.support.percent.PercentRelativeLayout>
-
     </android.support.percent.PercentRelativeLayout>
 </android.support.v4.widget.DrawerLayout>
