--- a/SportsSideKick/app/src/main/res/layout-large/fragment_chat.xml
+++ b/SportsSideKick/app/src/main/res/layout-large/fragment_chat.xml
@@ -193,7 +193,7 @@
             android:clickable="true"
             android:gravity="center"
             android:padding="@dimen/half_margin"
-            android:visibility="gone">
+            android:visibility="visible">
 
             <TextView
                 android:id="@+id/chat_menu_create"
