Comment delete implemented.

--- a/SportsSideKick/app/src/main/res/layout/comment_item.xml
+++ b/SportsSideKick/app/src/main/res/layout/comment_item.xml
@@ -52,7 +52,38 @@
             android:layout_marginStart="@dimen/margin_10"
             android:layout_marginTop="@dimen/margin_5"
             android:layout_toEndOf="@+id/message_information"
-            android:text="Translate"
+            android:text="@string/translate"
+            android:textColor="?colorGray"
+            android:textSize="@dimen/font_size_10"
+            />
+
+        <TextView
+            android:id="@+id/edit"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/post_text"
+            android:paddingEnd="@dimen/padding_16"
+            android:layout_marginBottom="@dimen/margin_5"
+            android:layout_marginStart="@dimen/margin_10"
+            android:layout_marginTop="@dimen/margin_5"
+            android:layout_toEndOf="@+id/translate"
+            android:text="@string/edit"
+            android:textColor="?colorGray"
+            android:visibility="gone"
+            android:textSize="@dimen/font_size_10"
+            />
+        <TextView
+            android:id="@+id/delete"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/post_text"
+            android:paddingEnd="@dimen/padding_16"
+            android:layout_marginBottom="@dimen/margin_5"
+            android:layout_marginStart="@dimen/margin_10"
+            android:layout_marginTop="@dimen/margin_5"
+            android:layout_toEndOf="@+id/edit"
+            android:text="@string/delete"
+            android:visibility="gone"
             android:textColor="?colorGray"
             android:textSize="@dimen/font_size_10"
             />
