Mute Chat implemented.

--- a/SportsSideKick/app/src/main/res/layout-large/fragment_chat.xml
+++ b/SportsSideKick/app/src/main/res/layout-large/fragment_chat.xml
@@ -250,6 +250,19 @@
                 android:padding="@dimen/half_margin"
                 android:text="@string/search"
                 android:textColor="?chatDetailsColorRef" />
+            <TextView
+                android:id="@+id/chat_menu_alerts"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginEnd="@dimen/margin_20"
+                android:layout_marginStart="@dimen/margin_10"
+                android:layout_weight="0.25"
+                android:background="?textViewRoundBorderShape"
+                android:gravity="center"
+                android:padding="@dimen/half_margin"
+                android:text="@string/alerts_on"
+                android:textColor="?chatDetailsColorRef" />
 
         </LinearLayout>
 
