--- a/SportsSideKick/app/src/main/res/layout-large/popup_edit_profile.xml
+++ b/SportsSideKick/app/src/main/res/layout-large/popup_edit_profile.xml
@@ -268,6 +268,24 @@
             android:layout_alignParentTop="true"
             android:background="@android:color/black" />
 
+        <TextView
+            android:id="@+id/wall_notifications"
+            android:layout_width="wrap_content"
+            android:layout_height="@dimen/height_30"
+            android:layout_gravity="center"
+            android:layout_centerVertical="true"
+            android:paddingStart="@dimen/margin_20"
+            android:paddingEnd="@dimen/margin_20"
+            android:layout_alignParentStart="true"
+            android:layout_marginEnd="@dimen/margin_5"
+            android:layout_marginStart="@dimen/margin_20"
+            android:textSize="@dimen/font_size_12"
+            android:background="?textViewRoundBorderShape"
+            android:gravity="center"
+            android:padding="@dimen/half_margin"
+            android:text="@string/enable_wall_notifications"
+            android:textColor="@color/white" />
+
         <ImageButton
             android:id="@+id/confirm_button"
             android:layout_width="wrap_content"
