--- a/SportsSideKick/app/src/main/res/layout-large/next_match_view.xml
+++ b/SportsSideKick/app/src/main/res/layout-large/next_match_view.xml
@@ -91,6 +91,7 @@
         <TextView
             android:id="@+id/label_right"
             style="@style/shadow_text_login"
+            fontPath="fonts/TitilliumWeb-SemiLight.ttf"
             android:layout_width="wrap_content"
             android:layout_height="60dp"
             android:layout_below="@+id/club_logo"
@@ -105,7 +106,6 @@
             app:autoSizeMinTextSize="20sp"
             app:autoSizeStepGranularity="2sp"
             app:autoSizeTextType="uniform"
-            app:fontPath="fonts/TitilliumWeb-SemiLight.ttf"
             app:layout_constraintBottom_toTopOf="@+id/next_match_container"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintLeft_toRightOf="@+id/label"
@@ -120,7 +120,7 @@
             android:layout_centerVertical="true"
             android:layout_marginBottom="@dimen/margin_30"
             android:background="@drawable/background_next_match_countdown"
-            android:visibility="visible"
+            android:visibility="gone"
             app:layout_constraintBottom_toTopOf="@+id/fc_logo"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent">
@@ -142,45 +142,45 @@
                 android:id="@+id/teams_info"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
                 android:layout_below="@+id/next_match_label"
                 android:layout_marginEnd="40dp"
                 android:layout_marginStart="40dp">
 
-                <!-- FIRST TEAM" -->
                 <TextView
                     android:id="@+id/left_name"
                     fontPath="fonts/TitilliumWeb-SemiBold.ttf"
                     android:layout_width="wrap_content"
-                    android:minWidth="@dimen/width_60"
-                    android:minHeight="@dimen/height_30"
                     android:layout_height="wrap_content"
+                    android:minHeight="@dimen/height_30"
                     android:layout_centerVertical="true"
-                    android:gravity="end"
+                    android:layout_toStartOf="@+id/left_image"
+                    android:maxLength="6"
                     android:maxLines="1"
                     android:paddingEnd="@dimen/padding_2"
                     android:text="BEN"
                     android:textColor="@color/white"
+                    android:background="@color/black"
+                    android:textSize="@dimen/font_size_25"
                     android:textStyle="bold"
-                    app:autoSizeMaxTextSize="@dimen/font_size_28"
-                    app:autoSizeMinTextSize="@dimen/font_size_20"
-                    app:autoSizeStepGranularity="1sp"
-                    app:autoSizeTextType="uniform" />
+                    />
 
                 <ImageView
                     android:id="@+id/left_image"
                     android:layout_width="@dimen/width_60"
                     android:layout_height="@dimen/height_60"
                     android:layout_centerVertical="true"
-                    android:layout_toEndOf="@+id/left_name" />
+                    android:src="@drawable/logo_ssk"
+                    android:layout_toStartOf="@+id/vs" />
 
                 <TextView
                     android:id="@+id/vs"
+                    android:layout_centerHorizontal="true"
                     fontPath="fonts/TitilliumWeb-SemiBold.ttf"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
                     android:layout_margin="@dimen/padding_8"
-                    android:layout_toEndOf="@+id/left_image"
                     android:text="@string/vs"
                     android:textColor="@color/colorAccentLight"
                     android:textSize="@dimen/font_size_20" />
@@ -189,28 +189,27 @@
                     android:id="@+id/right_image"
                     android:layout_width="@dimen/width_60"
                     android:layout_height="@dimen/height_60"
+                    android:src="@drawable/logo_ssk"
                     android:layout_centerVertical="true"
                     android:layout_toEndOf="@+id/vs" />
 
-               <!-- SECOND TEAM   -->
                 <TextView
                     android:id="@+id/right_name"
                     fontPath="fonts/TitilliumWeb-SemiBold.ttf"
                     android:layout_width="wrap_content"
-                    android:minWidth="@dimen/width_60"
-                    android:minHeight="@dimen/height_30"
                     android:layout_height="wrap_content"
+                    android:minHeight="@dimen/height_30"
                     android:layout_centerVertical="true"
                     android:layout_toEndOf="@+id/right_image"
-                    android:maxLines="1"
+                    android:background="@color/black"
                     android:paddingStart="@dimen/padding_2"
+                    android:maxLines="1"
+                    android:maxLength="6"
                     android:text="BEN"
                     android:textColor="@color/white"
                     android:textStyle="bold"
-                    app:autoSizeMaxTextSize="@dimen/font_size_28"
-                    app:autoSizeMinTextSize="@dimen/font_size_20"
-                    app:autoSizeStepGranularity="1sp"
-                    app:autoSizeTextType="uniform" />
+                    android:textSize="@dimen/font_size_25"
+                    />
             </RelativeLayout>
 
             <TextView
