New wall layouts - News and Rumours (mobile)

--- a/SportsSideKick/app/src/main/res/values/attrs.xml
+++ b/SportsSideKick/app/src/main/res/values/attrs.xml
@@ -39,6 +39,7 @@
     <attr name="colorPrimarySemiLight" format="reference" />
 
     <attr name="colorGray" format="reference" />
+    <attr name="colorGrayMediumLight" format="reference" />
     <attr name="white" format="reference" />
     <attr name="white_semitransparent" format="reference" />
 
