--- a/SportsSideKick/app/src/main/res/layout-large/fragment_wall.xml
+++ b/SportsSideKick/app/src/main/res/layout-large/fragment_wall.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@color/colorPrimaryMediumLight"
+    android:background="@color/login_background"
     tools:context="base.app.fragment.instance.WallFragment">
 
 
