--- a/SportsSideKick/app/src/main/res/layout/wall_item_news.xml
+++ b/SportsSideKick/app/src/main/res/layout/wall_item_news.xml
@@ -1,124 +1,158 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="@dimen/height_230"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_height="wrap_content"
+    android:layout_marginBottom="@dimen/margin_5">
 
-    <RelativeLayout
-        android:id="@+id/image_container"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+    <ImageView
+        android:id="@+id/image"
+        android:layout_width="@dimen/height_120"
+        android:layout_height="match_parent"
+        android:layout_alignBottom="@id/likes_and_comments"
+        android:layout_alignParentStart="true"
+        android:scaleType="centerCrop"
+        android:src="@drawable/news_holder_image" />
 
-        <ImageView
-            android:id="@+id/image"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/height_130"
-            android:layout_centerInParent="true"
-            android:adjustViewBounds="true"
-            android:scaleType="centerCrop"
-            android:src="@drawable/news_holder_image" />
-
-    </RelativeLayout>
-
-
-    <RelativeLayout
+    <TextView
+        android:id="@+id/text_content"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/image_container"
-        android:background="@color/white">
+        android:layout_alignParentEnd="true"
+        android:layout_toEndOf="@+id/image"
+        android:background="?white"
+        android:ellipsize="end"
+        android:maxLines="3"
+        android:padding="@dimen/padding_12"
+        android:scrollHorizontally="true"
+        android:text="@string/demo_content_lorem_long"
+        android:textColor="?black"
+        android:textSize="@dimen/font_size_16" />
 
-        <TextView
-            android:id="@+id/caption"
-            android:layout_width="match_parent"
+    <RelativeLayout
+        android:id="@+id/likes_and_comments"
+        android:layout_width="match_parent"
+        android:layout_toEndOf="@+id/image"
+        android:layout_height="@dimen/height_35"
+        android:layout_below="@+id/text_content"
+        android:background="@color/white"
+        android:paddingEnd="@dimen/margin_10"
+        android:paddingBottom="@dimen/margin_5">
+
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/author_user_image"
+            android:layout_width="@dimen/width_26"
+            android:layout_height="@dimen/height_26"
+            android:layout_alignParentStart="true"
+            android:layout_centerVertical="true"
+            android:layout_marginStart="@dimen/padding_10"
+            android:src="?profileImageIcon" />
+
+        <LinearLayout
+            android:id="@+id/comments_container"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:maxLines="2"
-            android:minLines="2"
-            android:padding="@dimen/padding_5"
-            android:textColor="?colorPrimaryVeryLightRef"
-            android:textSize="@dimen/font_size_16"
-            android:textStyle="bold" />
-
-        <RelativeLayout
-            android:id="@+id/user_details"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/height_20"
             android:layout_alignParentBottom="true"
-            android:layout_marginStart="@dimen/margin_10"
-            android:paddingBottom="@dimen/margin_5"
-            android:layout_marginEnd="@dimen/margin_10"
-            android:layout_marginTop="@dimen/margin_10">
+            android:layout_alignParentEnd="true"
+            android:gravity="center">
 
-            <LinearLayout
-                android:id="@+id/comments_container"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
-                android:layout_alignParentEnd="true"
-                android:gravity="center">
-
-                <android.support.v7.widget.AppCompatImageView
-                    android:id="@+id/comments_icon"
-                    android:layout_width="@dimen/width_15"
-                    android:layout_height="@dimen/width_15"
-                    android:background="@drawable/ic_comment"
-                    android:layout_marginEnd="@dimen/margin_2" />
-
-                <TextView
-                    android:id="@+id/comments_count"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textSize="@dimen/font_size_10" />
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:id="@+id/likes_container"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
-                android:layout_marginEnd="@dimen/padding_8"
-                android:layout_toStartOf="@id/comments_container"
-                android:gravity="center">
-
-                <RelativeLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content">
-
-                    <android.support.v7.widget.AppCompatImageView
-                        android:id="@+id/likes_icon"
-                        android:layout_width="@dimen/width_15"
-                        android:layout_height="@dimen/height_15"
-                        android:layout_marginEnd="@dimen/margin_2"
-                        android:background="@drawable/ic_like" />
-
-                    <android.support.v7.widget.AppCompatImageView
-                        android:id="@+id/liked_icon"
-                        android:layout_width="@dimen/width_15"
-                        android:layout_height="@dimen/height_15"
-                        android:layout_marginEnd="@dimen/margin_2"
-                        android:background="@drawable/ic_like"
-                        app:backgroundTint="@color/colorPrimaryVeryLight"
-                        android:visibility="gone" />
-
-
-                </RelativeLayout>
-
-                <TextView
-                    android:id="@+id/likes_count"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textSize="@dimen/font_size_10" />
-            </LinearLayout>
+            <android.support.v7.widget.AppCompatImageView
+                android:id="@+id/comments_icon"
+                android:layout_width="@dimen/width_15"
+                android:layout_height="@dimen/width_15"
+                android:layout_marginEnd="@dimen/margin_2"
+                android:background="@drawable/ic_comment" />
 
             <TextView
-                android:id="@+id/author"
-                android:layout_width="match_parent"
+                android:id="@+id/comments_count"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_toStartOf="@id/likes_container"
-                android:maxLines="1"
-                android:textSize="@dimen/font_size_10"
-                android:textColor="?colorGray"/>
-        </RelativeLayout>
+                android:text="@string/demo_content_number_1"
+                android:textSize="@dimen/font_size_10" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/likes_container"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_marginEnd="@dimen/padding_8"
+            android:layout_toStartOf="@id/comments_container"
+            android:gravity="center">
+
+            <RelativeLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+
+                <android.support.v7.widget.AppCompatImageView
+                    android:id="@+id/likes_icon"
+                    android:layout_width="@dimen/width_15"
+                    android:layout_height="@dimen/height_15"
+                    android:layout_marginEnd="@dimen/margin_2"
+                    android:background="@drawable/ic_like" />
+
+                <android.support.v7.widget.AppCompatImageView
+                    android:id="@+id/liked_icon"
+                    android:layout_width="@dimen/width_15"
+                    android:layout_height="@dimen/height_15"
+                    android:layout_marginEnd="@dimen/margin_2"
+                    android:background="@drawable/ic_like"
+                    android:visibility="gone"
+                    app:backgroundTint="@color/colorPrimaryVeryLight" />
+
+
+            </RelativeLayout>
+
+            <TextView
+                android:id="@+id/likes_count"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/demo_content_number_2"
+                android:textSize="@dimen/font_size_10" />
+        </LinearLayout>
     </RelativeLayout>
 
+
+    <RelativeLayout
+        android:id="@+id/comment_container"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/likes_and_comments"
+        android:background="@color/colorGrayMediumLight"
+        android:visibility="visible">
+
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/comment_author_user_image"
+            android:layout_width="@dimen/width_26"
+            android:layout_height="@dimen/height_26"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginBottom="@dimen/margin_10"
+            android:layout_marginStart="@dimen/margin_10"
+            android:layout_marginTop="@dimen/margin_8"
+            android:src="?profileImageIcon" />
+
+        <TextView
+            android:id="@+id/text_comment"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_marginStart="@dimen/margin_10"
+            android:layout_toEndOf="@+id/comment_author_user_image"
+            android:ellipsize="end"
+            android:lineSpacingMultiplier="0.826"
+            android:maxLines="4"
+            android:minLines="1"
+            android:padding="@dimen/padding_8"
+            android:scrollHorizontally="true"
+            android:text="@string/demo_content_lorem_long"
+            android:textColor="?black"
+            android:textSize="@dimen/font_size_14" />
+    </RelativeLayout>
+    <View
+        android:layout_below="@id/comment_container"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/height_2"
+        android:background="@drawable/wall_item_shadow"/>
 </RelativeLayout>
