--- a/SportsSideKick/app/src/main/res/layout/wall_item_user_post.xml
+++ b/SportsSideKick/app/src/main/res/layout/wall_item_user_post.xml
@@ -2,97 +2,91 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="@dimen/height_230"
-    android:background="?wallItemUserPostBackground">
+    android:layout_height="wrap_content"
+    android:layout_marginBottom="@dimen/margin_5"
+    android:background="@color/white">
 
-    <RelativeLayout
-        android:id="@+id/images_container"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <View
+        android:id="@+id/strip"
+        android:layout_width="@dimen/width_5"
+        android:layout_height="@dimen/width_5"
+        android:layout_alignBottom="@+id/likes_and_comments"
+        android:layout_alignParentTop="true"
+        android:background="@color/colorPrimaryVeryLight" />
+
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/author_user_image"
+        android:layout_width="@dimen/width_26"
+        android:layout_height="@dimen/height_26"
         android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true">
+        android:layout_alignParentTop="true"
+        android:layout_marginBottom="@dimen/margin_5"
+        android:layout_marginEnd="@dimen/margin_5"
+        android:layout_marginStart="@dimen/margin_10"
+        android:layout_marginTop="@dimen/margin_5"
+        android:src="?profileImageIcon"
+        android:visibility="visible" />
 
-        <ImageView
-            android:id="@+id/image"
-            android:layout_width="@dimen/width_230"
-            android:layout_height="@dimen/height_120"
-            android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true"
-            android:layout_marginEnd="@dimen/margin_15"
-            android:layout_marginStart="@dimen/margin_15"
-            android:layout_marginTop="@dimen/margin_15"
-            android:adjustViewBounds="true"
-            android:scaleType="fitStart"
-            android:src="@drawable/news_holder_image"
-            android:visibility="visible" />
-
-        <de.hdodenhof.circleimageview.CircleImageView
-            android:id="@+id/user_image"
-            android:layout_width="@dimen/width_50"
-            android:layout_height="@dimen/width_50"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:layout_marginStart="@dimen/margin_10"
-            android:layout_marginTop="@dimen/margin_10"
-            android:src="?profileImageIcon"
-            app:civ_border_color="@color/colorPrimaryVeryLight"
-            app:civ_border_width="@dimen/width_2" />
-
-        <ImageView
-            android:id="@+id/play_button"
-            android:layout_width="@dimen/width_62"
-            android:layout_height="@dimen/height_62"
-            android:layout_centerInParent="true"
-            android:background="@drawable/ic_post_play" />
-
-    </RelativeLayout>
+    <ImageView
+        android:id="@+id/image"
+        android:layout_width="@dimen/height_145"
+        android:layout_height="@dimen/height_145"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentTop="true"
+        android:scaleType="centerCrop"
+        android:src="@drawable/news_holder_image"
+        android:visibility="visible" />
 
     <TextView
-        android:id="@+id/caption"
+        android:id="@+id/text_content"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/user_details"
-        android:layout_below="@id/images_container"
-        android:layout_marginEnd="@dimen/margin_10"
-        android:layout_marginStart="@dimen/margin_10"
-        android:layout_marginTop="@dimen/margin_10"
+        android:layout_below="@+id/author_user_image"
+        android:layout_toEndOf="@+id/strip"
+        android:layout_toStartOf="@+id/image"
+        android:background="?white"
         android:ellipsize="end"
-        android:maxLines="2"
-        android:minLines="2"
-        android:textColor="?wallUserContentTextColor"
-        android:textSize="@dimen/font_size_12" />
+        android:maxLines="3"
+        android:minLines="1"
+        android:padding="@dimen/padding_12"
+        android:scrollHorizontally="true"
+        android:text="@string/demo_content_lorem_long"
+        android:textColor="?black"
+        android:textSize="@dimen/font_size_16" />
 
     <RelativeLayout
-        android:id="@+id/user_details"
+        android:id="@+id/likes_and_comments"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/height_20"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="@dimen/margin_5"
-        android:layout_marginEnd="@dimen/margin_10"
-        android:layout_marginStart="@dimen/margin_10"
-        android:layout_marginTop="@dimen/margin_10">
+        android:layout_height="@dimen/height_25"
+        android:layout_alignBottom="@+id/image"
+        android:layout_alignWithParentIfMissing="true"
+        android:layout_below="@+id/text_content"
+        android:layout_toEndOf="@+id/strip"
+        android:layout_toStartOf="@+id/image"
+        android:background="@color/white"
+        android:paddingBottom="@dimen/margin_5">
+
 
         <LinearLayout
             android:id="@+id/comments_container"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
-            android:layout_alignParentEnd="true"
+            android:layout_alignParentStart="true"
+            android:layout_marginStart="@dimen/padding_10"
             android:gravity="center">
 
             <android.support.v7.widget.AppCompatImageView
                 android:id="@+id/comments_icon"
                 android:layout_width="@dimen/width_15"
-                android:layout_height="@dimen/height_15"
+                android:layout_height="@dimen/width_15"
                 android:layout_marginEnd="@dimen/margin_2"
-                android:background="@drawable/ic_comment"
-                app:backgroundTint="?colorGray" />
-
+                android:background="@drawable/ic_comment" />
             <TextView
                 android:id="@+id/comments_count"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="?colorGray"
+                android:text="@string/demo_content_number_1"
                 android:textSize="@dimen/font_size_10" />
 
         </LinearLayout>
@@ -103,48 +97,42 @@
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:layout_marginEnd="@dimen/padding_8"
-            android:layout_toStartOf="@id/comments_container"
+            android:layout_marginStart="@dimen/padding_8"
+            android:layout_toEndOf="@id/comments_container"
             android:gravity="center">
 
             <RelativeLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content">
-
                 <android.support.v7.widget.AppCompatImageView
                     android:id="@+id/likes_icon"
                     android:layout_width="@dimen/width_15"
                     android:layout_height="@dimen/height_15"
                     android:layout_marginEnd="@dimen/margin_2"
-                    android:background="@drawable/ic_like"
-                    app:backgroundTint="?colorGray" />
+                    android:background="@drawable/ic_like" />
 
                 <android.support.v7.widget.AppCompatImageView
                     android:id="@+id/liked_icon"
                     android:layout_width="@dimen/width_15"
-                    android:layout_height="@dimen/width_15"
+                    android:layout_height="@dimen/height_15"
                     android:layout_marginEnd="@dimen/margin_2"
                     android:background="@drawable/ic_like"
-                    app:backgroundTint="?colorAccent"
-                    android:visibility="gone" />
+                    android:visibility="gone"
+                    app:backgroundTint="@color/colorPrimaryVeryLight" />
             </RelativeLayout>
-
             <TextView
                 android:id="@+id/likes_count"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="?colorGray"
+                android:text="@string/demo_content_number_2"
                 android:textSize="@dimen/font_size_10" />
         </LinearLayout>
-
-        <TextView
-            android:id="@+id/author"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_toStartOf="@id/likes_container"
-            android:maxLines="1"
-            android:textColor="?colorGray"
-            android:textSize="@dimen/font_size_10" />
     </RelativeLayout>
 
-
+    <View
+        android:layout_alignParentBottom="true"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/height_2"
+        android:layout_below="@id/likes_and_comments"
+        android:background="@drawable/wall_item_shadow" />
 </RelativeLayout>
