--- a/SportsSideKick/app/src/main/res/values/dimens.xml
+++ b/SportsSideKick/app/src/main/res/values/dimens.xml
@@ -222,4 +222,5 @@
     <dimen name="profile_coin_height">38dp</dimen>
     <dimen name="profile_coin_width">38dp</dimen>
     <dimen name="translation_popup_picker_height">90dp</dimen>
+    <dimen name="height_145">145dp</dimen>
 </resources>
