--- a/SportsSideKick/app/src/main/res/layout/wall_item_rumour.xml
+++ b/SportsSideKick/app/src/main/res/layout/wall_item_rumour.xml
@@ -15,7 +15,7 @@
     <ImageView
         android:id="@+id/image"
         android:layout_width="@dimen/height_120"
-        android:layout_height="match_parent"
+        android:layout_height="@dimen/height_120"
         android:layout_alignBottom="@id/likes_and_comments"
         android:layout_alignParentEnd="true"
         android:layout_alignParentTop="true"
@@ -34,6 +34,7 @@
         android:maxLines="3"
         android:padding="@dimen/padding_12"
         android:scrollHorizontally="true"
+        android:lineSpacingMultiplier="0.92"
         android:text="@string/demo_content_lorem_long"
         android:textColor="?black"
         android:textSize="@dimen/font_size_16" />
