--- a/SportsSideKick/app/src/sportsidekick/res/values/colors.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/values/colors.xml
@@ -38,6 +38,8 @@
     <color name="white"                                     >#ffffff</color>
 
     <color name="facebook_blue"                             >#3b5998</color>
+    <color name="shop_blue"                                 >#0be5ff</color>
+    <color name="stats_pink"                                >#ff0b5b</color>
 
 
 
