--- a/SportsSideKick/app/src/main/res/layout/activity_lounge_phone.xml
+++ b/SportsSideKick/app/src/main/res/layout/activity_lounge_phone.xml
@@ -25,7 +25,7 @@
             android:id="@+id/fragment_holder"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_above="@+id/side_menu_recycler"
+            android:layout_above="@+id/bottom_menu_recycler_view"
             android:layout_below="@+id/left_top_bar_container"
             android:background="@color/colorPrimaryMediumLight" >
         </RelativeLayout>
@@ -120,7 +120,7 @@
         </RelativeLayout>
 
         <base.app.util.ui.NoScrollRecycler
-            android:id="@+id/side_menu_recycler"
+            android:id="@+id/bottom_menu_recycler_view"
             android:layout_width="match_parent"
             android:layout_height="@dimen/standard_button_height"
             android:layout_alignParentBottom="true"
@@ -139,7 +139,7 @@
             android:id="@+id/fragment_left_popup_holder"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_above="@+id/side_menu_recycler"
+            android:layout_above="@+id/bottom_menu_recycler_view"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
             android:background="@color/transparent" />
@@ -172,7 +172,7 @@
             android:id="@+id/fragment_radio_container"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_above="@+id/side_menu_recycler"
+            android:layout_above="@+id/bottom_menu_recycler_view"
             android:layout_below="@+id/left_top_bar_container"
             android:background="@android:color/transparent"
             android:orientation="vertical">
@@ -195,7 +195,7 @@
             android:id="@+id/fragment_tv_container"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_above="@+id/side_menu_recycler"
+            android:layout_above="@+id/bottom_menu_recycler_view"
             android:layout_below="@+id/left_top_bar_container"
             android:background="@android:color/transparent"
             android:orientation="vertical">
@@ -213,6 +213,14 @@
                 android:background="@android:color/transparent" />
         </LinearLayout>
 
+
+        <View
+            android:id="@+id/shadow"
+            android:layout_width="fill_parent"
+            android:layout_height="@dimen/height_2"
+            android:alpha="0.6"
+            android:layout_above="@+id/bottom_menu_recycler_view"
+            android:background="@drawable/top_gradient_drawable" />
     </android.support.percent.PercentRelativeLayout>
 
     <android.support.percent.PercentRelativeLayout
@@ -226,7 +234,8 @@
             android:id="@+id/drawer_container"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:layout_marginEnd="@dimen/margin_negative_2"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentTop="true"
             android:background="@color/colorGraySemiLight">
 
             <android.support.percent.PercentRelativeLayout
@@ -272,8 +281,8 @@
                             android:layout_height="@dimen/activity_lounge_user_profile_size"
                             android:layout_centerInParent="true"
                             android:layout_marginBottom="@dimen/padding_8"
-                            android:layout_marginStart="@dimen/padding_8"
                             android:layout_marginEnd="@dimen/padding_8"
+                            android:layout_marginStart="@dimen/padding_8"
                             android:adjustViewBounds="true"
                             android:contentDescription="@string/image"
                             android:padding="@dimen/padding_2"
@@ -301,12 +310,14 @@
                                 android:progressDrawable="?circularProgressBarDrawable"
                                 android:visibility="invisible" />
                         </RelativeLayout>
+
                         <RelativeLayout
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_below="@+id/holder_progress_bar"
                             android:layout_centerHorizontal="true"
                             android:layout_marginTop="@dimen/margin_negative_8">
+
                             <ImageView
                                 android:id="@+id/user_level_background"
                                 android:layout_width="@dimen/profile_level_marker_size"
@@ -316,6 +327,7 @@
                                 android:contentDescription="@string/image"
                                 android:src="?nextLevelMarkerIcon"
                                 android:visibility="invisible" />
+
                             <TextView
                                 android:id="@+id/user_level"
                                 android:layout_width="@dimen/profile_level_marker_size"
@@ -329,11 +341,13 @@
                         </RelativeLayout>
                     </RelativeLayout>
                 </RelativeLayout>
+
                 <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_toEndOf="@+id/profile_info_holder"
                     app:layout_widthPercent="50%">
+
                     <android.support.percent.PercentRelativeLayout
                         android:id="@+id/your_coins"
                         android:layout_width="wrap_content"
@@ -341,6 +355,7 @@
                         android:layout_centerInParent="true"
                         android:gravity="center_horizontal"
                         android:orientation="vertical">
+
                         <ImageView
                             android:id="@+id/user_coin_icon"
                             android:layout_width="wrap_content"
@@ -350,6 +365,7 @@
                             android:contentDescription="@null"
                             android:src="?userCoinIcon"
                             app:layout_heightPercent="25%" />
+
                         <TextView
                             android:id="@+id/you_have"
                             android:layout_width="wrap_content"
@@ -363,6 +379,7 @@
                             android:textAlignment="center"
                             android:textColor="@color/colorPrimaryVeryDark"
                             android:textSize="@dimen/font_size_8" />
+
                         <TextView
                             android:id="@+id/your_coins_value"
                             android:layout_width="wrap_content"
@@ -378,6 +395,7 @@
                     </android.support.percent.PercentRelativeLayout>
                 </RelativeLayout>
             </android.support.percent.PercentRelativeLayout>
+
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/menu_recycler_view"
                 android:layout_width="match_parent"
@@ -389,8 +407,7 @@
                 android:choiceMode="singleChoice"
                 android:dividerHeight="0dp"
                 android:footerDividersEnabled="false"
-                android:overScrollFooter="@android:color/transparent">
-            </android.support.v7.widget.RecyclerView>
+                android:overScrollFooter="@android:color/transparent"></android.support.v7.widget.RecyclerView>
         </android.support.percent.PercentRelativeLayout>
     </android.support.percent.PercentRelativeLayout>
 </android.support.v4.widget.DrawerLayout>
