--- a/SportsSideKick/app/src/main/res/layout/wall_item_stats.xml
+++ b/SportsSideKick/app/src/main/res/layout/wall_item_stats.xml
@@ -12,27 +12,53 @@
         android:layout_height="@dimen/width_5"
         android:layout_alignBottom="@+id/likes_and_comments"
         android:layout_alignParentTop="true"
-        android:background="@color/shop_blue" />
+        android:background="@color/stats_pink" />
+
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/author_user_image"
+        android:layout_width="@dimen/width_26"
+        android:layout_height="@dimen/height_26"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginBottom="@dimen/margin_5"
+        android:layout_marginEnd="@dimen/margin_5"
+        android:layout_marginStart="@dimen/margin_10"
+        android:layout_marginTop="@dimen/margin_5"
+        android:src="?profileImageIcon"
+        android:visibility="visible" />
+
+    <TextView
+        android:id="@+id/author_name"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_toEndOf="@+id/author_user_image"
+        android:layout_marginTop="@dimen/margin_5"
+        android:layout_alignBottom="@+id/author_user_image"
+        android:gravity="center_vertical|start"
+        android:layout_toStartOf="@+id/image"
+        android:text="Karen Smith"
+        android:textColor="@color/colorPrimaryVeryLight"
+        android:background="?white"
+        />
 
     <ImageView
         android:id="@+id/image"
         android:layout_width="@dimen/height_145"
-        android:layout_toEndOf="@+id/strip"
         android:layout_height="@dimen/height_145"
-        android:layout_marginEnd="@dimen/margin_25"
-        android:layout_marginStart="@dimen/margin_25"
+        android:layout_alignParentEnd="true"
         android:layout_alignParentTop="true"
         android:scaleType="centerCrop"
-        android:src="@color/white"
+        android:src="@drawable/news_holder_image"
         android:visibility="visible" />
 
     <TextView
         android:id="@+id/text_content"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_toEndOf="@+id/image"
+        android:layout_below="@+id/author_user_image"
+        android:layout_toEndOf="@+id/strip"
+        android:layout_toStartOf="@+id/image"
         android:background="?white"
         android:ellipsize="end"
         android:maxLines="3"
@@ -43,23 +69,15 @@
         android:textColor="?black"
         android:textSize="@dimen/font_size_16" />
 
-
-    <de.hdodenhof.circleimageview.CircleImageView
-        android:id="@+id/user_image"
-        android:layout_width="@dimen/width_26"
-        android:layout_height="@dimen/height_26"
-        android:layout_toEndOf="@+id/image"
-        android:layout_alignBottom="@+id/image"
-        android:paddingBottom="@dimen/margin_5"
-        android:layout_marginStart="@dimen/margin_10"
-        android:src="?profileImageIcon" />
-
     <RelativeLayout
         android:id="@+id/likes_and_comments"
         android:layout_width="match_parent"
         android:layout_height="@dimen/height_25"
         android:layout_alignBottom="@+id/image"
-        android:layout_toEndOf="@+id/user_image"
+        android:layout_alignWithParentIfMissing="true"
+        android:layout_below="@+id/text_content"
+        android:layout_toEndOf="@+id/strip"
+        android:layout_toStartOf="@+id/image"
         android:background="@color/white"
         android:paddingBottom="@dimen/margin_5">
 
@@ -126,5 +144,10 @@
         </LinearLayout>
     </RelativeLayout>
 
-
+    <View
+        android:layout_alignParentBottom="true"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/height_2"
+        android:layout_below="@id/likes_and_comments"
+        android:background="@drawable/wall_item_shadow" />
 </RelativeLayout>
