--- a/SportsSideKick/app/src/main/res/values/dimens.xml
+++ b/SportsSideKick/app/src/main/res/values/dimens.xml
@@ -223,4 +223,5 @@
     <dimen name="profile_coin_width">38dp</dimen>
     <dimen name="translation_popup_picker_height">90dp</dimen>
     <dimen name="height_145">145dp</dimen>
+    <dimen name="width_30">30dp</dimen>
 </resources>
