--- a/SportsSideKick/app/src/main/res/layout/wall_item_news.xml
+++ b/SportsSideKick/app/src/main/res/layout/wall_item_news.xml
@@ -30,90 +30,7 @@
         android:textColor="?black"
         android:textSize="@dimen/font_size_16" />
 
-    <RelativeLayout
-        android:id="@+id/likes_and_comments"
-        android:layout_width="match_parent"
-        android:layout_toEndOf="@+id/image"
-        android:layout_height="@dimen/height_35"
-        android:layout_below="@+id/text_content"
-        android:background="@color/white"
-        android:paddingEnd="@dimen/margin_10"
-        android:paddingBottom="@dimen/margin_5">
-
-        <de.hdodenhof.circleimageview.CircleImageView
-            android:id="@+id/author_user_image"
-            android:layout_width="@dimen/width_20"
-            android:layout_height="@dimen/height_20"
-            android:layout_alignParentStart="true"
-            android:layout_centerVertical="true"
-            android:layout_marginStart="@dimen/padding_10"
-            android:src="?profileImageIcon" />
-
-        <LinearLayout
-            android:id="@+id/comments_container"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentEnd="true"
-            android:gravity="center">
-
-            <android.support.v7.widget.AppCompatImageView
-                android:id="@+id/comments_icon"
-                android:layout_width="@dimen/width_15"
-                android:layout_height="@dimen/width_15"
-                android:layout_marginEnd="@dimen/margin_2"
-                android:background="@drawable/ic_comment" />
-
-            <TextView
-                android:id="@+id/comments_count"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/demo_content_number_1"
-                android:textSize="@dimen/font_size_10" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/likes_container"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_marginEnd="@dimen/padding_8"
-            android:layout_toStartOf="@id/comments_container"
-            android:gravity="center">
-
-            <RelativeLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
-
-                <android.support.v7.widget.AppCompatImageView
-                    android:id="@+id/likes_icon"
-                    android:layout_width="@dimen/width_15"
-                    android:layout_height="@dimen/height_15"
-                    android:layout_marginEnd="@dimen/margin_2"
-                    android:background="@drawable/ic_like" />
-
-                <android.support.v7.widget.AppCompatImageView
-                    android:id="@+id/liked_icon"
-                    android:layout_width="@dimen/width_15"
-                    android:layout_height="@dimen/height_15"
-                    android:layout_marginEnd="@dimen/margin_2"
-                    android:background="@drawable/ic_like"
-                    android:visibility="gone"
-                    app:backgroundTint="@color/colorPrimaryVeryLight" />
-
-
-            </RelativeLayout>
-
-            <TextView
-                android:id="@+id/likes_count"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/demo_content_number_2"
-                android:textSize="@dimen/font_size_10" />
-        </LinearLayout>
-    </RelativeLayout>
-
+    <include layout="@layout/include_likes_comments_count"/>
 
     <RelativeLayout
         android:id="@+id/comment_container"
