--- a/SportsSideKick/app/src/main/res/layout/wall_item_user_post.xml
+++ b/SportsSideKick/app/src/main/res/layout/wall_item_user_post.xml
@@ -23,7 +23,7 @@
         android:layout_alignParentTop="true"
         android:layout_marginBottom="@dimen/margin_5"
         android:layout_marginEnd="@dimen/margin_5"
-        android:layout_marginStart="@dimen/margin_10"
+        android:layout_marginStart="@dimen/margin_12"
         android:layout_marginTop="@dimen/margin_5"
         android:src="?profileImageIcon"
         android:visibility="visible" />
@@ -61,94 +61,22 @@
         android:layout_below="@+id/author_user_image"
         android:layout_toEndOf="@+id/strip"
         android:layout_toStartOf="@+id/image"
-        android:background="?white"
         android:ellipsize="end"
         android:maxLines="3"
         android:minLines="1"
-        android:padding="@dimen/padding_12"
+        android:layout_marginTop="-12dp"
+        android:padding="@dimen/padding_8"
         android:scrollHorizontally="true"
         android:text="@string/demo_content_lorem_long"
         android:textColor="?black"
         android:textSize="@dimen/font_size_16" />
 
-    <RelativeLayout
-        android:id="@+id/likes_and_comments"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/height_25"
-        android:layout_alignBottom="@+id/image"
-        android:layout_alignWithParentIfMissing="true"
-        android:layout_below="@+id/text_content"
-        android:layout_toEndOf="@+id/strip"
-        android:layout_toStartOf="@+id/image"
-        android:background="@color/white"
-        android:paddingBottom="@dimen/margin_5">
-
-
-        <LinearLayout
-            android:id="@+id/comments_container"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentStart="true"
-            android:layout_marginStart="@dimen/padding_10"
-            android:gravity="center">
-
-            <android.support.v7.widget.AppCompatImageView
-                android:id="@+id/comments_icon"
-                android:layout_width="@dimen/width_15"
-                android:layout_height="@dimen/width_15"
-                android:layout_marginEnd="@dimen/margin_2"
-                android:background="@drawable/ic_comment" />
-            <TextView
-                android:id="@+id/comments_count"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/demo_content_number_1"
-                android:textSize="@dimen/font_size_10" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/likes_container"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_marginEnd="@dimen/padding_8"
-            android:layout_marginStart="@dimen/padding_8"
-            android:layout_toEndOf="@id/comments_container"
-            android:gravity="center">
-
-            <RelativeLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
-                <android.support.v7.widget.AppCompatImageView
-                    android:id="@+id/likes_icon"
-                    android:layout_width="@dimen/width_15"
-                    android:layout_height="@dimen/height_15"
-                    android:layout_marginEnd="@dimen/margin_2"
-                    android:background="@drawable/ic_like" />
-
-                <android.support.v7.widget.AppCompatImageView
-                    android:id="@+id/liked_icon"
-                    android:layout_width="@dimen/width_15"
-                    android:layout_height="@dimen/height_15"
-                    android:layout_marginEnd="@dimen/margin_2"
-                    android:background="@drawable/ic_like"
-                    android:visibility="gone"
-                    app:backgroundTint="@color/colorPrimaryVeryLight" />
-            </RelativeLayout>
-            <TextView
-                android:id="@+id/likes_count"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/demo_content_number_2"
-                android:textSize="@dimen/font_size_10" />
-        </LinearLayout>
-    </RelativeLayout>
+            <include layout="@layout/include_likes_comments_count"/>
 
     <View
         android:layout_width="match_parent"
         android:layout_height="@dimen/height_2"
         android:layout_alignParentBottom="true"
         android:background="@drawable/wall_item_shadow" />
+
 </RelativeLayout>
