--- a/SportsSideKick/app/src/main/res/layout/wall_item_news.xml
+++ b/SportsSideKick/app/src/main/res/layout/wall_item_news.xml
@@ -8,7 +8,7 @@
     <ImageView
         android:id="@+id/image"
         android:layout_width="@dimen/height_120"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_alignBottom="@id/likes_and_comments"
         android:layout_alignParentStart="true"
         android:scaleType="centerCrop"
