--- a/SportsSideKick/app/src/main/res/layout/wall_item_news.xml
+++ b/SportsSideKick/app/src/main/res/layout/wall_item_news.xml
@@ -61,7 +61,7 @@
                 android:layout_width="@dimen/width_15"
                 android:layout_height="@dimen/width_15"
                 android:layout_marginEnd="@dimen/margin_2"
-                android:background="@drawable/ic_comment" />
+                android:background="@drawable/ic_comments_count" />
 
             <TextView
                 android:id="@+id/comments_count"
